# mandel-thread-typer

./: .qmake.stash  CMakeLists.txt  ComputeTaskGenerator.cpp  ComputeTaskGenerator.h  EditMenu.cpp  LICENSE  ParameterMaker.h  README.md  RenderHistory.cpp  RenderMenu.h  RendererConfig.cpp  computeddatasegment.h  filemenu.cpp  filemenu.h  informationdisplay.cpp  mandelbrot.rc  mandelbrot.sln  mandelbrot.vcxproj  mandelbrot.vcxproj.filters  mandelbrot_resource.rc  mandelbrotrenderer.h  mandelbrotresources.qrc  mandelbrotwidget.cpp  mandelbrotwidget.h  regionattributes.cpp  renderthreadmediator.cpp  renderworker.cpp  renderworker.h  settingshandler.cpp  settingsuser.h  threadiconmap.cpp  threadiconmap.h  toolsmenu.cpp  toolsoptionswidget.cpp  toolsoptionswidget.h  windowmenu.h  windowthreadinfo.cpp  windowthreadinfo.h  windowthreadinfokey.cpp  windowthreadinfokey.h  (+1 more)
cmakebuild/: runCMake.bat  setQt5Location.bat  setQtLocation.sh
src/: CMakeLists.txt  ParameterMaker.h  RenderHistory.h  RendererConfig.h  buttonuser.h  computeTimes.txt  computeddatasegment.cpp  informationdisplay.h  mandelbrot.pro  mandelbrot.vcxproj  mandelbrot.vcxproj.filters  mandelbrotrenderer.cpp  radiointegerbutton.cpp  radiointegerbutton.h  regionattributes.h  renderthread.cpp  renderthread.h  renderthreadmediator.h  settingshandler.h  timings.cfg  workerthreaddata.cpp
src/include/: ComputeTaskGenerator.h  EditMenu.h  MandelbrotGuiTools.h  ParameterMaker.h  ParametersMenu.h  PrecisionHandler.h  RenderHistory.h  RenderParametersWidget.h  RendererConfig.h  buttonuser.h  computeddatasegment.h  filemenu.h  informationdisplay.h  mandelbrotrenderer.h  mandelbrotwidget.h  regionattributes.h  renderthread.h  renderthreadmediator.h  renderworker.h  settingshandler.h  settingsuser.h  threadiconmap.h  toolsmenu.h  toolsoptionswidget.h  windowthreadinfo.h  windowthreadinfokey.h  workerthreaddata.h
src/src/: ComputeTaskGenerator.cpp  MandelbrotGuiTools.cpp  ParametersMenu.cpp  PrecisionHandler.cpp  RenderHistory.cpp  RenderMenu.cpp  RenderParametersWidget.cpp  RendererConfig.cpp  computeddatasegment.cpp  filemenu.cpp  informationdisplay.cpp  main.cpp  mandelbrotrenderer.cpp  mandelbrotwidget.cpp  regionattributes.cpp  renderthread.cpp  renderthreadmediator.cpp  renderworker.cpp  settingshandler.cpp  threadiconmap.cpp  toolsmenu.cpp  toolsoptionswidget.cpp  windowmenu.cpp  windowthreadinfo.cpp  windowthreadinfokey.cpp
